--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server.js",
-    "login": "node login.js"
+    "login": "node login.js",
+    "postinstall": "npx playwright install chromium --with-deps"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,16 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
     "playwright": "^1.45.1",
+    "playwright-chromium": "^1.55.0",
+    "puppeteer": "^24.19.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "react-native-webview": "^13.16.0",
+    "react-native-youtube-iframe": "^2.4.1",
     "rss-parser": "^3.13.0"
   }
 }
